--- a/css/main.css
+++ b/css/main.css
@@ -42,12 +42,17 @@ body {
 /* Hero */
 .hero-title {
   color: var(--white-text-color);
+  background-color: var(--primaty-text-color);
 }
 
 /* section */
 
 .section-title {
   color: var(--title-text-color);
+}
+
+.feature-list {
+  list-style: none;
 }
 
 .feature-list .title {
@@ -62,17 +67,31 @@ body {
   fill: var(--accent-bg-color);
 }
 
+.service-list {
+  list-style: none;
+}
 .service-title {
   color: var(--white-text-color);
   background-color: rgba(47, 48, 58, 0.8);
+}
+
+.team-list {
+  list-style: none;
 }
 
 .team-title {
   color: var(--title-text-color);
 }
 
+.social-list {
+  list-style: none;
+}
 .social-icon:hover {
   color: var(--accent-bg-color);
+}
+
+.client-list {
+  list-style: none;
 }
 
 /* button */
