--- a/css/main.css
+++ b/css/main.css
@@ -8,47 +8,28 @@
   --footer-bg-color: #2f303a;
 }
 
-body {
-  color: var(--primaty-text-color);
-}
-
-/* header */
-.logo {
-  color: var(--accent-bg-color);
-}
-
-.logo-studio {
-  color: var(--title-text-color);
-}
-
-.site-nav .link {
-  color: var(--title-text-color);
-}
-
-.site-nav .link:hover,
-.site-nav .link:focus {
-  color: var(--accent-bg-color);
-}
-
-.contact-nav .link {
-  color: var(--primaty-text-color);
-}
-
-.contact-nav .link:hover,
-.contact-nav .link:focus {
-  color: var(--accent-bg-color);
-}
-
 /* Hero */
 .hero-title {
   color: var(--white-text-color);
   background-color: var(--primaty-text-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 }
 
 /* section */
 
 .section-title {
   color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .feature-list {
@@ -57,6 +38,11 @@ body {
 
 .feature-list .title {
   color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 .feature-list .icon {
@@ -67,20 +53,46 @@ body {
   fill: var(--accent-bg-color);
 }
 
+.feature-list .text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
 .service-list {
   list-style: none;
 }
 .service-title {
   color: var(--white-text-color);
   background-color: rgba(47, 48, 58, 0.8);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 .team-list {
   list-style: none;
 }
 
+.team-list .text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
 .team-title {
   color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .social-list {
@@ -99,4 +111,10 @@ body {
 .button {
   color: var(--white-text-color);
   background-color: var(--accent-bg-color);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-decoration: none;
 }
