--- a/css/common.css
+++ b/css/common.css
@@ -20,7 +20,18 @@ footer {
 }
 
 /* header */
+
+.conteiner {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  outline: 2px solid blue;
+}
+
 .logo {
+  margin-bottom: 10px;
   color: var(--accent-bg-color);
   font-family: raleway, sans-serif;
 
@@ -50,6 +61,10 @@ footer {
 }
 
 .site-nav {
+  margin-top: 0px;
+  margin-bottom: 0px;
+
+  padding: 0px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -64,6 +79,10 @@ footer {
 }
 
 .contact-nav {
+  margin-top: 0px;
+  margin-bottom: 0px;
+
+  padding: 0px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -87,6 +106,8 @@ footer {
 }
 
 .address-street {
+  margin-bottom: 9px;
+
   color: var(--white-text-color);
   font-style: normal;
   font-weight: 400;
@@ -96,6 +117,8 @@ footer {
 }
 
 .address .link {
+  margin-bottom: 9px;
+
   color: var(--footer-main-color);
   font-style: normal;
   font-weight: 400;
@@ -114,6 +137,8 @@ footer {
 }
 
 .join {
+  margin-bottom: 21px;
+
   color: var(--white-text-color);
   font-weight: bold;
   font-size: 14px;
@@ -123,6 +148,8 @@ footer {
 }
 
 .join-social {
+  margin: 0px;
+  padding: 0px;
   list-style: none;
 }
 
