--- a/css/main.css
+++ b/css/main.css
@@ -9,14 +9,23 @@
 }
 
 /* Hero */
+
+.hero {
+  text-align: center;
+
+  outline: 2px solid blue;
+}
+
 .hero-title {
+  margin-top: 0px;
+  margin-bottom: 46px;
+
   color: var(--white-text-color);
   background-color: var(--primaty-text-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
 
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
@@ -24,6 +33,7 @@
 /* section */
 
 .section-title {
+  margin: 0px;
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 36px;
@@ -33,6 +43,8 @@
 }
 
 .feature-list {
+  margin: 0px;
+  padding: 0px;
   list-style: none;
 }
 
@@ -43,6 +55,19 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+
+.icon {
+  margin-bottom: 30px;
+}
+
+.title {
+  margin: 0px;
+  margin-bottom: 10px;
+}
+
+.text {
+  margin: 0px;
 }
 
 .feature-list .icon {
@@ -61,9 +86,13 @@
 }
 
 .service-list {
+  margin: 0px;
+  padding: 0px;
   list-style: none;
 }
 .service-title {
+  margin: 0px;
+
   color: var(--white-text-color);
   background-color: rgba(47, 48, 58, 0.8);
   font-weight: 700;
@@ -75,10 +104,13 @@
 }
 
 .team-list {
+  margin: 0px;
+  padding: 0px;
   list-style: none;
 }
 
 .team-list .text {
+  margin-bottom: 16px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
@@ -87,6 +119,8 @@
 }
 
 .team-title {
+  margin: 0px;
+  margin-bottom: 10px;
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -96,24 +130,38 @@
 }
 
 .social-list {
+  margin: 0px;
+  padding: 0px;
   list-style: none;
 }
 .social-icon:hover {
   color: var(--accent-bg-color);
 }
 
+.section-title.clients {
+  margin-bottom: 50px;
+}
+
 .client-list {
+  margin: 0px;
+  padding: 0px;
   list-style: none;
 }
 
 /* button */
 
 .button {
+  display: inline-block;
+  border-radius: 4px;
+  padding: 10px 32px;
+  min-width: 200px;
+  text-align: center;
+
   color: var(--white-text-color);
   background-color: var(--accent-bg-color);
   font-weight: 700;
   font-size: 16px;
-  line-height: 1.87;
+  line-height: 1.88;
   text-align: center;
   letter-spacing: 0.06em;
   text-decoration: none;
